--- a/index.html
+++ b/index.html
@@ -337,14 +337,14 @@
 	<!-- End Contact Section -->
 
 	<!-- Start Footer Section -->
-	<section class="bg-dark p-5">
-		<div class="container-fluid">
+	<section class="bg-dark px-5">
+		<div class="container-fluid py-3">
 			
-			<div class="row border-bottom text-center">
+			<div class="row text-center">
 			
 				<div class="col-md-4">
-					<div class="mb-3">
-						<img src="./assets/img/logo.png" width="50px" alt="logo" />
+					<div class="mb-3 text-white">
+						<i class="fas fa-utensils fa-4x"></i>
 					</div>
 					<div class="text-white">
 						<i class="fab fa-facebook fa-2x"></i>
@@ -378,7 +378,9 @@
 
 			</div>
 
-			<p class="text-center text-white py-3">&copy;Copyright @<span id="autoyear"></span> Mr.Shelby</p>
+			<div class="border-top">
+				<p class="text-center text-white py-3">&copy;Copyright @<span id="autoyear"></span> Mr.Shelby</p>
+			</div>
 
 		</div>
 	</section>
